log
Fri 05 May 2023 07:00:28 PM UTC: 
 tests:  0|5
total_score: 0/70
d29d131
Fri 05 May 2023 07:03:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
22a438c
Fri 05 May 2023 07:03:48 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
7542629
Sun 07 May 2023 03:29:51 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|5
total_score: 0/70
6110a3d
Sun 07 May 2023 03:32:02 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:17: error: ‘sudo’ undeclared (first use in this function)
   55 |   printf("\n%d",sudo[0][0]);
      |                 ^~~~
sudoku.c:55:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
11537d2
Sun 07 May 2023 03:32:18 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4523623
Sun 07 May 2023 03:33:09 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
e21ae7d
Sun 07 May 2023 03:34:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3cc78fd
Sun 07 May 2023 03:34:30 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bb1c746
Sun 07 May 2023 03:35:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
fdbe0f0
Sun 07 May 2023 03:37:34 AM UTC: 
 sudoku.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:23: error: ‘adjn’ undeclared (first use in this function)
   57 |       printf("\n%d\n",adjn->sudo[i][j]);
      |                       ^~~~
sudoku.c:57:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4a4c804
Sun 07 May 2023 03:37:51 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:23: error: ‘adjn’ undeclared (first use in this function)
   63 |       printf("\n%d\n",adjn->sudo[i][j]);
      |                       ^~~~
sudoku.c:63:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6314f6b
Sun 07 May 2023 03:38:07 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
83a1f7c
Sun 07 May 2023 03:38:29 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
8514acd
Sun 07 May 2023 03:40:24 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:20: error: assignment to expression with array type
   59 |         adjn->sudo = n->sudo;
      |                    ^
Compilation failed
aca4adb
Sun 07 May 2023 03:41:09 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:20: error: assignment to expression with array type
   59 |         adjn->sudo = n->sudo;
      |                    ^
Compilation failed
00cb90a
Sun 07 May 2023 03:41:20 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b7b8eec
Sun 07 May 2023 03:41:40 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
ebcf01b
Sun 07 May 2023 03:42:37 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
8e40971
Sun 07 May 2023 03:43:14 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
75d7cbb
Sun 07 May 2023 03:47:13 AM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:7: error: unused variable ‘num’ [-Werror=unused-variable]
   55 |   int num = 0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
ac47da5
Sun 07 May 2023 03:47:20 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
16d6f8a
Sun 07 May 2023 03:47:38 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
845ba9d
Sun 07 May 2023 03:49:28 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4fe611b
Sun 07 May 2023 03:50:17 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5e1afce
Sun 07 May 2023 03:53:43 AM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1f59cdf
Sun 07 May 2023 03:53:54 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
75ea839
Sun 07 May 2023 04:02:43 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 5/70
647f2c9
Sun 07 May 2023 04:05:59 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
07026bd
Sun 07 May 2023 04:11:26 AM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:20: error: ‘adjn’ undeclared (first use in this function)
   67 |     pushBack(list, adjn);
      |                    ^~~~
sudoku.c:67:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3adb910
Sun 07 May 2023 04:11:37 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bd263d7
Sun 07 May 2023 04:12:36 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
908d205
Sun 07 May 2023 04:12:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
eb7f9d6
Sun 07 May 2023 04:13:25 AM UTC: 
 sudoku.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 5/70
9bf72fd
Sun 07 May 2023 04:16:22 AM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
3b671f1
